<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_DS402_6040h_ControlWord" Id="{83be7c7a-ee4f-0162-19e7-5bc5ccadbba7}">
    <Declaration><![CDATA[{attribute 'pack_mode' := '1'}
TYPE ST_DS402_6040h_ControlWord :
STRUCT
	b0_SwitchOn 					: BIT;
	b1_EnableVoltage				: BIT;
	b2_QuickStop					: BIT;
	b3_EnableOperation				: BIT;
	b4_OperationModeSpecific		: BIT;
	b5_OperationModeSpecific		: BIT;
	b6_OperationModeSpecific		: BIT;
	b7_FaultReset					: BIT;
	b8_Reserved						: BIT;
	b9_Reserved						: BIT;
	b10_Reserved					: BIT;
	b11_Reserved					: BIT;
	b12_Reserved					: BIT;
	b13_Reserved					: BIT;
	b14_Reserved					: BIT;
	b15_Reserved					: BIT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>